--- a/mainapp/templates/mainapp/courses_list.html
+++ b/mainapp/templates/mainapp/courses_list.html
@@ -8,97 +8,46 @@
         
     <div class="row justify-content-center mt-3">
         
-
-                <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-                <a href="#">
-                    <img src='{% static "/img/course001.jpg" %}' class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Web Python</h5>
-                    </div>
-                </a>
+        {% for p in page %}
+            <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
+            <a href="#">
+                <img src='{% static p.cover %}' class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title text-center">{{ p.name }}</h5>
                 </div>
-
-        
-
-                <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-                <a href="#">
-                    <img src='{% static "/img/course002.jpg" %}' class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Web Golang</h5>
-                    </div>
-                </a>
-                </div>
-
-        
-
-                <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-                <a href="#">
-                    <img src='{% static "/img/course003.jpg" %}' class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Web JavaScript</h5>
-                    </div>
-                </a>
-                </div>
-
-        
-
-                <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-                <a href="#">
-                    <img src='{% static "/img/course004.jpg" %}' class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Web Java</h5>
-                    </div>
-                </a>
-                </div>
-
-
-
-                <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-                <a href="#">
-                    <img src='{% static "/img/course005.jpg" %}' class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Web PHP</h5>
-                    </div>
-                </a>
-                </div>
-
-        
-
-                <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-                <a href="#">
-                    <img src='{% static "/img/course006.jpg" %}' class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Python AI</h5>
-                    </div>
-                </a>
-                </div>
-
-        
-
-                <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-                <a href="#">
-                    <img src='{% static "/img/course007.jpg" %}' class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">DevOps</h5>
-                    </div>
-                </a>
-                </div>
+            </a>
+            </div>
+        {% endfor %}
 
         
     </div>
     <div class="row justify-content-center align-items-center mt-3 mb-n3">
-  <nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#">Next</a></li>
-    </ul>
-  </nav>
-</div>
-
-
+          <nav aria-label="Page navigation example">
+              <ul class="pagination">
+                  {% if page.has_previous %}
+                      <li class="page-item">
+                          <a class="page-link" href="?page={{ page.previous_page_number }}">previous</a>
+                      </li>
+                  {% else %}
+                      <li class="page-item disabled">
+                          <a class="page-link" href="#">previous</a>
+                      </li>
+                  {% endif %}
+                      <li class="page-item">
+                        <a class="page-link" href="#">{{ page.number }}</a>
+                      </li>
+                  {% if page.has_next %}
+                      <li class="page-item">
+                          <a class="page-link" href="?page={{ page.next_page_number }}">next</a>
+                      </li>
+                  {% else %}
+                      <li class="page-item disabled">
+                          <a class="page-link" href="#">next</a>
+                      </li>
+                  {% endif %}
+              </ul>
+          </nav>
+      </div>
     </div>
 {% include 'mainapp/components/footer.html' %}
 {% endblock content %}
