--- a/mainapp/templates/mainapp/news.html
+++ b/mainapp/templates/mainapp/news.html
@@ -1,8 +1,8 @@
-{% extends 'mainapp/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block content %}
-    {% include 'mainapp/components/top_nav_bar.html' %}
+    {% include 'components/top_nav_bar.html' %}
     <div class="container-md">
 
         
@@ -83,5 +83,5 @@
 
 
     </div>
-{% include 'mainapp/components/footer.html' %}
+{% include 'components/footer.html' %}
 {% endblock content %}
