--- a/authapp/templates/registration/register.html
+++ b/authapp/templates/registration/register.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row justify-content-center my-2">
       <div class="col-lg-6">
-        <h3>Р&nbsp;РµРіРёСЃС‚СЂР°С†РёСЏ РЅРѕРІРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ</h3>
+        <h3>Регистрация нового пользователя</h3>
         <form method="post" class="mt-2" enctype="multipart/form-data">
           {% csrf_token %}
           <div id="div_id_username" class="form-group"> <label for="id_username" class=" requiredField">
@@ -15,11 +15,11 @@
               Password<span class="asteriskField">*</span> </label>
             <div class=""> <input type="password" name="password1" autocomplete="new-password" class="textinput textInput form-control" required="" id="id_password1" aria-autocomplete="list"> <small id="hint_id_password1" class="form-text text-muted">
                 <ul>
-                  <li>Your password canвЂ™t be too similar to your other personal
+                  <li>Your password can't be too similar to your other personal
                     information.</li>
                   <li>Your password must contain at least 8 characters.</li>
-                  <li>Your password canвЂ™t be a commonly used password.</li>
-                  <li>Your password canвЂ™t be entirely numeric.</li>
+                  <li>Your password can't be a commonly used password.</li>
+                  <li>Your password can't be entirely numeric.</li>
                 </ul>
               </small> </div>
           </div>
@@ -54,7 +54,7 @@
             </div>
           </div>
 
-          <button type="submit" class="btn btn-primary btn-block">Р—Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°С‚СЊСЃСЏ</button>
+          <button type="submit" class="btn btn-primary btn-block">Зарегистрироваться</button>
         </form>
       </div>
     </div>
