--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -1,9 +1,9 @@
-{% extends 'mainapp/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% load email_to_link %}
 
 {% block content %}
-    {% include 'mainapp/components/top_nav_bar.html' %}
+    {% include 'components/top_nav_bar.html' %}
 
     <div class="container-md">
 
@@ -94,5 +94,5 @@
 
 
     </div>
-{% include 'mainapp/components/footer.html' %}
+{% include 'components/footer.html' %}
 {% endblock content %}
