--- a/mainapp/templates/mainapp/courses_list.html
+++ b/mainapp/templates/mainapp/courses_list.html
@@ -1,8 +1,8 @@
-{% extends 'mainapp/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block content %}
-    {% include 'mainapp/components/top_nav_bar.html' %}
+    {% include 'components/top_nav_bar.html' %}
     <div class="container-md">
 
         
@@ -49,5 +49,5 @@
           </nav>
       </div>
     </div>
-{% include 'mainapp/components/footer.html' %}
+{% include 'components/footer.html' %}
 {% endblock content %}
