--- a/templates/components/top_nav_bar.html
+++ b/templates/components/top_nav_bar.html
@@ -21,7 +21,7 @@
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="ddProfile" role="button" data-toggle="dropdown"
-                           aria-haspopup="true" aria-expanded="false">
+                            aria-haspopup="true" aria-expanded="false">
                             Профиль
                         </a>
                         <div class="dropdown-menu" aria-labelledby="ddProfile">
@@ -32,6 +32,8 @@
                             <a class="dropdown-item" href="#">Модерация</a>
                             {% if user.is_superuser %}
                                 <a class="dropdown-item" href="/admin/">Административный раздел</a>
+                                <a class="dropdown-item" href="{% url 'mainapp:log_view' %}"
+                                    target="_blank">Лог</a>
                             {% endif %}
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'authapp:logout' %}">Выход</a>
